--- a/empPayrollDemo/Content/CustomCSS/employeeList.css
+++ b/empPayrollDemo/Content/CustomCSS/employeeList.css
@@ -5,7 +5,7 @@
 
 .content-col {
     min-height: calc(100vh - 80px);
-    background-color: #f7f7f7;
+    background-color:azure;
     padding: 20px 0 10px;
     box-sizing: border-box;
 }
@@ -23,7 +23,7 @@
 .details-text {
     font: normal normal bold 24px/25px Roboto;
     letter-spacing: 0px;
-    color: #42515f;
+    color:black;
     opacity: 1;
 }
 
@@ -48,17 +48,17 @@ th {
 
 th {
     letter-spacing: 0px;
-    color: #658292;
+    color: navy;
     text-transform: uppercase;
     opacity: 1;
     font-size: 16px;
-    font-family: Roboto;
+    font-family: 'Comic Sans MS';
     font-weight: 500;
 }
 
 td {
-    font: normal normal normal 14px/21px Roboto;
+    font: normal normal normal 14px/21px 'Comic Sans MS';
     letter-spacing: 0px;
-    color: #3d3d3d;
+    color: black;
     opacity: 1;
 }
